--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     body {
       margin: 0;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
@@ -26,31 +25,17 @@
       box-shadow: 0 4px 20px rgba(0,0,0,0.2);
     }
 
-    #controls {
-      margin-top: 10px;
-    }
-
-    button {
-      padding: 8px 16px;
-      font-size: 16px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      background-color: #0077cc;
-      color: #fff;
-      transition: background 0.3s;
-    }
-
-    button:hover {
-      background-color: #005fa3;
+    /* Standard-UI-Elemente ausblenden außer dem AR-Button */
+    model-viewer::part(default-progress-bar),
+    model-viewer::part(default-progress-mask) {
+      display: none;
     }
   </style>
 </head>
 <body>
   <!-- 3D Modell -->
   <model-viewer 
-    id="viewer"
-    src="stauchen.glb" 
+    src="Stauchen.glb"
     camera-controls
     autoplay
     animation-name="Animation"
@@ -62,24 +47,5 @@
     max-field-of-view="80deg"
     ar>
   </model-viewer>
-
-  <!-- Umschalt-Button -->
-  <div id="controls">
-    <button onclick="toggleAR()">In AR anzeigen</button>
-  </div>
-
-  <script>
-    const viewer = document.getElementById('viewer');
-    const button = document.querySelector('#controls button');
-
-    function toggleAR() {
-      // Prüfen ob AR unterstützt wird
-      if (viewer.canActivateAR) {
-        viewer.activateAR();
-      } else {
-        alert("AR wird auf diesem Gerät nicht unterstützt.");
-      }
-    }
-  </script>
 </body>
 </html>
