--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
     interaction-prompt="none"
     min-field-of-view="20deg"
     max-field-of-view="80deg"
+    interpolation-decay="100"
     ar>
+    ar-modes="scene-viewer webxr"
   </model-viewer>
 </body>
 </html>
