--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <model-viewer 
     src="Stauchen.glb"
     camera-controls
+    camera-orbit="180deg 90deg auto"
     autoplay
     animation-name="Animation"
     environment-image="neutral"
